<resources>
    <string name="app_name">Longevity</string>
    <string name="questioner_header">Questionnaire</string>
    <string name="questioner_intro">Please answer the below questions</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="question5">Question 5</string>
    <string name="question6">Question 6</string>
    <string name="submit_button">SUBMIT</string>

    <string name="signup_header">SIGN-UP</string>
    <string name="signup_intro">Please register your details</string>>
    <string name="signup_username">Enter your Username</string>
    <string name="signup_phone_number">Enter your Phone number</string>
    <string name="signup_email_id">Enter your Email ID</string>
    <string name="signup_password">Enter your Password</string>
    <string name="signup_confirm_password">Confirm your Password</string>
    <string name="returning_user"><u>Already existing user ?</u></string>
    <string name="signup_button">SIGN-UP</string>

    <string name="login_header">LOGIN</string>
    <string name="login_intro">Please enter your details</string>
    <string name="login_user_identifier">Your Username or Phone number</string>
    <string name="login_password">Your Password</string>
    <string name="login_button">LOGIN</string>


</resources>
