<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_header"
        android:layout_centerHorizontal="true"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/loginIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_intro"
        android:layout_below="@+id/loginHeader"
        android:layout_margin="@dimen/margin"/>

    <EditText
        android:id="@+id/loginUserIdentifier"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/login_user_identifier"
        android:inputType="text"
        android:textSize="7pt"
        android:width="@dimen/edit_text_width"
        android:layout_below="@+id/loginIntro"
        android:layout_margin="@dimen/margin"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:width="@dimen/edit_text_width"
        android:layout_below="@+id/loginUserIdentifier"
        android:layout_margin="@dimen/margin"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginPassword"
        android:layout_margin="@dimen/margin"
        android:onClick="login_button"/>
</RelativeLayout>
</ScrollView>