<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.domain.longevity.Questionnaire">

    <TextView
        android:id="@+id/questioner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questioner"
        android:layout_centerHorizontal="true"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"/>
    <TextView
        android:id="@+id/questionerIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questioner_intro"
        android:layout_below="@+id/questioner"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:layout_below="@+id/questionerIntro"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question1"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:layout_below="@+id/answer1"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question2"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:layout_below="@+id/answer2"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question3"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4"
        android:layout_below="@+id/answer3"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question4"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question5"
        android:layout_below="@+id/answer4"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question5"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/question6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question6"
        android:layout_below="@+id/answer5"
        android:layout_margin="@dimen/margin"/>
    <EditText
        android:id="@+id/answer6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/edit_text_width"
        android:inputType="text"
        android:layout_below="@+id/question6"
        android:layout_margin="@dimen/margin"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_below="@+id/answer6"
        android:layout_margin="@dimen/margin"
        android:layout_centerHorizontal="true"
        android:onClick="submit_button"/>

</RelativeLayout>
</ScrollView>